2008-09-09 [colin]	0.19.0cvs7

	* src/gtkhtml2_viewer.c
	* libgtkhtml/gtkhtmlcontext.c
	* libgtkhtml/gtkhtmlcontext.h
	* libgtkhtml/a11y/htmlboxaccessible.h
	* libgtkhtml/a11y/htmlviewaccessible.h
	* libgtkhtml/document/htmldocument.h
	* libgtkhtml/document/htmlparser.c
	* libgtkhtml/document/htmlparser.h
	* libgtkhtml/graphics/htmlpainter.c
	* libgtkhtml/layout/html/htmlboxembedded.c
	* libgtkhtml/layout/html/htmlboximage.c
	* libgtkhtml/test/testgtkhtml.c
	* libgtkhtml/view/htmlview.c
	* libgtkhtml/view/htmlview.h
		Undeprecate for GTK+ 2.14

2008-08-21 [colin]	0.19.0cvs6

	* libgtkhtml/css/cssmatcher.c
		Fix crasher on background image url(none)
	* libgtkhtml/layout/html/htmlboximage.c
		Maybe fix strange crash
		

2008-08-17 [colin]	0.19.0cvs5

	* src/gtkhtml2_viewer.c
		Warning fix

2008-08-07 [colin]	0.19.0cvs4

	* src/gtkhtml2_viewer.c
	* libgtkhtml/dom/html/dom-htmlselectelement.c
	* libgtkhtml/graphics/htmlcolor.c
	* libgtkhtml/graphics/htmlgdkpainter.c
	* libgtkhtml/layout/htmllinebox.c
	* libgtkhtml/layout/html/htmlboxembeddedentry.c
	* libgtkhtml/layout/html/htmlboxembeddedradio.c
	* libgtkhtml/layout/html/htmlboxembeddedselect.c
	* libgtkhtml/layout/html/htmlboxembeddedtextarea.c
	* libgtkhtml/view/htmlview.c
		Undeprecate

2008-07-31 [colin]	0.19.0cvs3

	* src/gtkhtml2_viewer.c
		Get rid of GtkItemFactory

2008-07-23 [colin]	0.19.0cvs2

	* src/gtkhtml2_viewer.c
		Fix bug 1677, 'Doesn't render HTML from match.com 
		correctly'. Fix offsets when injecting the Charset
		header.

2008-07-06 [paul]	0.19.0cvs1

	* libgtkhtml/css/cssparser.h
		fix compilation on FreeBSD 4.8-RELEASE
		Thanks to Michael Hughes

2008-06-27 [paul]	0.19.0

	0.19 released

2008-06-27 [paul]	0.18.0cvs6

	* po/es.po
	* po/fi.po
		updated by Ricardo Mones and Flammie Pirinen

2008-05-12 [wwp]	0.18.0cvs5

	* src/gtkhtml2_prefs.c
		Fix storing of translated string "Any" in plugins prefs
		(whitelisting).

2008-05-02 [paul]	0.18.0cvs4

	* po/pl.po
		complete last commit
