@@ -106,3 +106,4 @@
 ( cvs diff -u -r 1.1.2.73 -r 1.1.2.74 src/gtkhtml2_viewer.c;  ) > 0.19.0cvs5.patchset
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/css/cssmatcher.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/layout/html/htmlboximage.c;  ) > 0.19.0cvs6.patchset
 ( cvs diff -u -r 1.1.2.74 -r 1.1.2.75 src/gtkhtml2_viewer.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/gtkhtmlcontext.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/gtkhtmlcontext.h;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/a11y/htmlboxaccessible.h;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/a11y/htmlviewaccessible.h;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/document/htmldocument.h;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 libgtkhtml/document/htmlparser.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/document/htmlparser.h;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/graphics/htmlpainter.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/layout/html/htmlboxembedded.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 libgtkhtml/layout/html/htmlboximage.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/test/testgtkhtml.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 libgtkhtml/view/htmlview.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/view/htmlview.h;  ) > 0.19.0cvs7.patchset
+( cvs diff -u -r 1.1.2.75 -r 1.1.2.76 src/gtkhtml2_viewer.c;  ) > 0.19.0cvs8.patchset
