@@ -1,3 +1,8 @@
+2008-09-09 [paul]	0.19.0cvs8
+
+	* src/gtkhtml2_viewer.c
+		fix build with GTK+ 2.13.0 or lower
+
 2008-09-09 [colin]	0.19.0cvs7
 
 	* src/gtkhtml2_viewer.c
